--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -1,192 +1,263 @@
-#jumbo-me{
-  background-image: url("./images/pkucloud1h100.png");
-  background-size: 100% 100%;
+#check-me{
+  font-size: 110%;
+  display: inline;
+  margin-right: 3px;
+  margin-left: 3px;
+  margin-top: 3px;
+}
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(1.4); /* IE */
+  -moz-transform: scale(1.4); /* FF */
+  -webkit-transform: scale(1.4); /* Safari and Chrome */
+  -o-transform: scale(1.4); /* Opera */
+  padding: 10px;
+}
+.modal-body{
+  padding-bottom: 0;
+}
+#modalSuccess{
+  border-radius: 10px;
+  margin-right: 5px;
+  width: 100px;
+  border: none;
+  height: 30px;
+}
+#modalSuccess:focus{
+  outline:none;
+}
+#modalClose{
+  height: 30px;
   background-color: #97180b;
-  color: #FFFFFF;
-  height: 600px;
+  border-radius: 10px;
+  border: 2px solid #97180b;
+  margin-right: 5px;
+  width: 100px;
+  color: white;
+}
+#modalClose:hover{
+  background-color:#ba0000;
+}
+.modal-content{
+  height:250px;
+  width:435px;
+}
+.signinBar{
+  border:2px solid #97180b;
+  border-radius: 10px;
+  margin-bottom:10px;
+  width:400px;
+}
+.positionModal{
+  position: absolute;
+  top:10%;
+  left:15%;
+  margin-bottom: 0;
+}
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+    outline:none;
+}
+button:hover, button:visited, button:link, button:active
+{
+    text-decoration: none;
+    outline:none;
+}
+#nav-me{
+  height: 130px;
+}
+#brands-combo{
+  position:relative;
+  left:80px;
+  padding-top: 20px;
+  width:115px;
 }
 #brand-me{
-  text-align = center;
-  margin-left: 22%;
-  margin-top:40px;
-  width:200px;
-  color: #97180b;
   font-family: 'Montserrat Alternates', sans-serif;
+  color: #97180b;
+  font-size: 15px;
+}
+#brand-me:hover{
+  text-decoration: none;
+}
+#brand-me:visited {
+    text-decoration: none;
+}
+#brand-me:focus {
+    text-decoration: none;
 }
 #header-img{
-  margin-left: 30%;
+  padding-top: 0;
+  padding-left: 10px;
+  display: block;
 }
+.navbar-b-me{
+  position: relative;
+  top: 85px;
+  right:12%;
+}
+.navbar-b-me li:hover{
+  color: black;
+  -webkit-transition-delay: 0.2s; /* Safari */
+  transition-delay: 0.2s;
+}
+#jumbo-me{
+  position: relative;
+  height:580px;
+  background-color: #97180b;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding: 0;
+}
+.panel-me{
+  background-color: white;
+  position: relative;
+  top:40%;
+  left:55%;
+  width:400px;
+  border-top: none;
+  border-radius: 10px;
+  padding-bottom: 10px;
+}
+
+#p-h{
+  background-color: #E0E0E0;
+  color:#97180b;
+  border: 2px solid #E0E0E0;
+  border-bottom: none;
+  border-radius: 10px 10px 0 0;
+  height:40px;
+  padding:0;
+  margin: 0;
+  font-size: 16px;
+  text-align: center;
+  padding-top: 7px;
+}
+
 #freetrial{
   color: #97180b;
 }
-.navbar-b-me > li > a{
-  font-size: 16px;
-  margin-top:10px;
-  font-family: 'Montserrat Alternates', sans-serif;
+#freetrial:hover{
+  color: #ba0000;
+  -webkit-transition-delay: 0.2s; /* Safari */
+  transition-delay: 0.2s;
 }
-#jumbo-me > .container >h1{
-  position:fixed;
-  left:100px;
-  top:200px;
-  font-size: 30px;
-  border:none;
-  width: 500px;
+.input-bar input{
+  border:2px solid #97180b;
+  border-radius:50px;
 }
-.words{
-  margin-top:22%;
+.input-bar input:focus{
+  border:3px solid #97180b;
+  outline: none;
+  border-radius:50px;
 }
-.panel-me{
-  position:fixed;
-  width: 540px;
-  height: 300px;
-  border:none;
-  left: 50%;
-  margin-top: 30%;
-  border-radius: 15px;
+.name-me{
+  width:160px;
+  display: inline-block;
+  margin-bottom: 15px;
 }
-
-
-.panel-me > .panel-body{
-  background-color: #FFFFFF;
-  border-radius: 0 0 15px 15px;
+#lastname{
+  margin-left:43px;
 }
-.panel-me > .panel-heading {
-    border-radius: 15px 15px 0 0;
-    border:1px solid black;
-    background-color: #777777;
-    color: white;
-    border:none;
-    text-align: center;
-}
-.panel-me > .panel-heading > h1{
-  font-size:16px;
-  font-family: 'Montserrat Alternates', sans-serif;
-}
-
-.firstname{
-  float:left;
-  width:200px;
-  height: 70px;
-  margin-left:30px;
-}
-
-.firstname > input{
-  height:50px;
-  background-color:#E8EBED;
-  transition: ease-in-out, background-color .35s ease-in-out;
-}
-.firstname > input:focus{
-  background-color:white;
-}
-.lastname{
-  float:right;
-  margin-right:30px;
-  width:200px;
-  height: 70px;
-}
-.lastname > input{
-  height:50px;
-  background-color:#E8EBED;
-  transition: ease-in-out, background-color .35s ease-in-out;
-}
-.lastname > input:focus{
-  background-color:white;
-}
-.email{
-  margin-right:30px;
-  margin-left: 30px;
-}
-.email > input{
-  height:50px;
-  background-color: #E8EBED;
-  transition: ease-in-out, background-color .35s ease-in-out;
-}
-.email > input:focus{
-  background-color:white;
-}
-.button{
-  border-radius: 4px 4px 4px 4px;
-  background-color: #97180b;
-  color: #FFFFFF;
-  position: relative;
-  float:left;
-  margin-left: 6%;
-  width: 40%;
-  height: 40px;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-  border:none;
-  font-family: 'Montserrat', sans-serif;
-  margin-top: 30px;
-}
-
-.button:hover{
-  background-color: #BA0000;
-}
-
-#nav-home{
-  border: none;
-  min-height: 75px;
+#signup-button{
   background-color: white;
+  color: #97180b;
+  border: 2px solid #97180b;
+  font-weight: 300;
+  height: 30px;
+  width: 240px;
+  border-radius: 50px;
+}
+#signup-button:hover{
+  background-color: #97180b;
+  color: white;
+  border:none;
+}
+#signup-button:focus{
+  outline: none;
+}
+#text-home{
+  position: absolute;
+  color: white;
+  background-color: #97180b;
+  left:8%;
+  top:40%;
+  font-size: 26px;
+  padding-top: 35px;
+  padding-left: 10px;
+  font-weight: bolder;
+}
+.font-Mont{
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+.font-Mont-red{
+  font-family: 'Montserrat Alternates', sans-serif;
+  color: #97180b;
 }
 
-@media(min-width:769px){
-  .panel-me{
-    position: fixed;
-    width: 35%;
-    height: 300px;
-    border:none;
-    left: 45%;
-    top:15%;
-    margin-top: 60px;
-
+@media(min-width:400px) and (max-width:767px){
+  .navbar-b-me{
+    top:0;
+    right:0;
   }
-  .firstname{
-    float:left;
-    width:40%;
-    height: 70px;
-    margin-left:6%;
+  #bt-cl-me{
+    position: absolute;
+    top:78px;
+    right:-8px;
   }
-  .lastname{
-    float:right;
-    margin-right:6%;
-    width:40%;
-    height: 70px;
+  #brand-me{
+  left:33%;
   }
-  .email{
-    margin-right:6%;
-    margin-left: 6%;
+  #header-img{
+  left:45.5%;
+  }
+  #brands-combo{
+    left:43%;
   }
 }
-@media(min-width:400px) and (max-width:769px){
-  .panel-me{
-    position: fixed;
-    width: 80%;
-    height: 300px;
-    border:none;
-    left: 5%;
-    top:20%;
-    margin-top: 60px;
 
+@media(min-width:400px) and (max-width:933px){
+  .panel-me{
+    width:42.8%;
   }
-  .firstname{
-    float:left;
-    width:40%;
-    height: 70px;
-    margin-left:6%;
+  #lastname{
+    margin-left:8.7%;
   }
-  .lastname{
-    float:right;
-    margin-right:6%;
-    width:40%;
-    height: 70px;
+  .name-me{
+    width:45%;
+    display: inline-block;
+    margin-bottom: 15px;
   }
-  .email{
-    margin-right:6%;
-    margin-left: 6%;
+  #text-home{
+    width:44%;
   }
-  .words{
-    margin-top: 50px;
-    margin-left:5%;
+}
+
+@media(min-width:400px) and (max-width:759px){
+  #lastname{
+    margin-left:8%;
+  }
+  #signup-button{
+    width:80%;
+  }
+}
+
+@media(min-width:400px) and (max-width:558px){
+  .panel-me{
+    left:5%;
+    width:90%;
+    top:50%;
+  }
+  #text-home{
+    top:25%;
+    width:100%;
+  }
+  #lastname{
+    margin-left:8.7%;
+  }
+  #brands-combo{
+    left:38%;
   }
 }
